--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     }
     .title-wrap{ flex: 1; min-width: 0; }
     .title{
-      font-size: 20px;
+      font-size: 24px;
       font-weight: 800;
       letter-spacing: .2px;
       margin: 6px 0 2px 0;
@@ -381,19 +381,24 @@
       text-align:right;
       min-width: 96px;
     }
-    .status{
+        .status{
       display:inline-flex;
       align-items:center;
       gap: 6px;
       font-weight: 850;
       font-size: 12px;
-      color: #9a3412;
-      background: rgba(245,158,11,.16);
       padding: 7px 9px;
       border-radius: 12px;
       margin-bottom: 6px;
       white-space:nowrap;
+      background: var(--pill-amber-bg);
+      color: var(--pill-amber-text);
     }
+    .status.red{ background: var(--pill-red-bg); color: var(--pill-red-text); }
+    .status.amber{ background: var(--pill-amber-bg); color: var(--pill-amber-text); }
+    .status.blue{ background: var(--pill-blue-bg); color: var(--pill-blue-text); }
+    .status.green{ background: var(--pill-green-bg); color: var(--pill-green-text); }
+    .status.muted{ background: rgba(17,24,39,.06); color: var(--muted); }
     .time{
       font-size: 12px;
       color: var(--muted);
@@ -630,7 +635,7 @@
             <input id="fSupport" inputmode="decimal" placeholder="14.00" />
           </div>
           <div class="field">
-            <label>突破位</label>
+            <label>突破位（可选）</label>
             <input id="fBreakout" inputmode="decimal" placeholder="16.00" />
           </div>
           <div class="field">
@@ -682,7 +687,7 @@
     const LS_KEY = "strategy_cards_frontend_only_v3";
     const LS_DRAFT_KEY = "strategy_cards_form_draft_v2";
 
-    /** @type {{id:string, symbol:string, price:number, prevClose:number, open:number, high:number, low:number, avgPrice:number, volRatio:number, status:string, updatedAt:string, stop:number, support:number, breakout:number, tp1:number, tp2:(number|null), name?:string, marketCode?:string}[]} */
+    /** @type {{id:string, symbol:string, price:number, prevClose:number, open:number, high:number, low:number, avgPrice:number, volRatio:number, status:string, updatedAt:string, stop:number, support:number, breakout:(number|null), tp1:number, tp2:(number|null), name?:string, marketCode?:string}[]} */
     let items = load() ?? [];
 
     items = migrateItems(items);
@@ -704,10 +709,11 @@
       if(!Array.isArray(arr)) return [];
       return arr.map((x) => {
         const it = (x && typeof x === "object") ? x : {};
-        // Add new field: breakout. If missing, default to support (best-effort).
+        // Field breakout: optional. Keep finite number; otherwise null.
         const support = Number(it.support);
-        const breakout = Number.isFinite(Number(it.breakout)) ? Number(it.breakout) :
-                         (Number.isFinite(support) ? support : 0);
+        const breakoutRaw = String(it.breakout ?? "").replaceAll(",","").trim();
+        const breakoutNum = breakoutRaw ? Number(breakoutRaw) : NaN;
+        const breakout = Number.isFinite(breakoutNum) ? breakoutNum : null;
         const tp2 = (it.tp2 === null || it.tp2 === undefined || it.tp2 === "") ? null : Number(it.tp2);
         return {
           ...it,
@@ -886,6 +892,16 @@
         .replaceAll("'","&#039;");
     }
 
+    function statusCls(s){
+      const x = String(s || "");
+      if(x === "已止损") return "red";
+      if(x === "已突破") return "blue";
+      if(x === "已止盈1" || x === "已止盈2") return "green";
+      if(x === "更新失败") return "muted";
+      // default: 监控中 / others
+      return "amber";
+    }
+
     function render(){
       listEl.innerHTML = "";
       if(items.length === 0){
@@ -899,8 +915,12 @@
       }
 
       items.forEach((it) => {
+        const hasBreakout = Number.isFinite(it.breakout);
         const hasTp2 = Number.isFinite(it.tp2);
-        const colsClass = hasTp2 ? "cols-5" : "cols-4";
+        let colsClass = "cols-4";
+        const pillCount = 3 + (hasBreakout ? 1 : 0) + (hasTp2 ? 1 : 0);
+        if(pillCount === 3) colsClass = "cols-3";
+        else if(pillCount === 5) colsClass = "cols-5";
         const prev = Number(it.prevClose);
         const cur = Number(it.price);
         let priceDirClass = "flat";
@@ -994,7 +1014,7 @@
               </div>
 
               <div class="price-right">
-                <div class="status">${escapeHtml(it.status)}</div>
+                <div class="status ${statusCls(it.status)}">${escapeHtml(it.status)}</div>
                 <div class="time">${escapeHtml(it.updatedAt)}</div>
               </div>
             </div>
@@ -1010,10 +1030,11 @@
                 <div class="k">支撑</div>
                 <div class="v">${formatCNY(it.support)}</div>
               </div>
+              ${Number.isFinite(it.breakout) ? `
               <div class="pill blue">
                 <div class="k">突破位</div>
                 <div class="v">${formatCNY(it.breakout)}</div>
-              </div>
+              </div>` : ``}
               <div class="pill green">
                 <div class="k">止盈1</div>
                 <div class="v">${formatCNY(it.tp1)}</div>
@@ -1264,7 +1285,7 @@
         fSymbol.value = it.symbol;
         fStop.value = String(it.stop ?? "");
         fSupport.value = String(it.support ?? "");
-        fBreakout.value = String(it.breakout ?? "");
+        fBreakout.value = (Number.isFinite(it.breakout) ? String(it.breakout) : "");
         fTp1.value = String(it.tp1 ?? "");
         fTp2.value = (Number.isFinite(it.tp2) ? String(it.tp2) : "");
       }
@@ -1301,7 +1322,7 @@
       const symbol = fSymbol.value.trim();
       const stop = parseNum(fStop.value);
       const support = parseNum(fSupport.value);
-      const breakout = parseNum(fBreakout.value);
+      const breakout = parseOptionalNum(fBreakout.value);
       const tp1 = parseNum(fTp1.value);
       const tp2 = parseOptionalNum(fTp2.value);
 
@@ -1310,8 +1331,12 @@
         fSymbol.focus();
         return;
       }
-      if(!Number.isFinite(stop) || !Number.isFinite(support) || !Number.isFinite(breakout) || !Number.isFinite(tp1)){
-        toast("止损/支撑/突破位/止盈1 请输入有效数字");
+      if(!Number.isFinite(stop) || !Number.isFinite(support) || !Number.isFinite(tp1)){
+        toast("止损/支撑/止盈1 请输入有效数字");
+        return;
+      }
+      if(breakout !== null && !Number.isFinite(breakout)){
+        toast("突破位 请输入有效数字或留空");
         return;
       }
       if(tp2 !== null && !Number.isFinite(tp2)){
@@ -1404,11 +1429,11 @@
           it.updatedAt = q.time || nowTime();
           it.name = q.name || it.name;
 
-          // status rule: <= stop => 已止损; >= tp2 => 已止盈2; >= tp1 => 已止盈1; >= breakout => 已突破; else 监控中
+          // status rule: <= stop => 已止损; >= tp2 => 已止盈2; >= tp1 => 已止盈1; >= breakout(可选) => 已突破; else 监控中
           if (Number(it.price) <= Number(it.stop)) it.status = "已止损";
           else if (Number.isFinite(it.tp2) && Number(it.price) >= Number(it.tp2)) it.status = "已止盈2";
           else if (Number(it.price) >= Number(it.tp1)) it.status = "已止盈1";
-          else if (Number(it.price) >= Number(it.breakout)) it.status = "已突破";
+          else if (Number.isFinite(it.breakout) && Number(it.price) >= Number(it.breakout)) it.status = "已突破";
           else it.status = "监控中";
         }
 
@@ -1450,7 +1475,7 @@
         if (Number(it.price) <= Number(it.stop)) it.status = "已止损";
         else if (Number.isFinite(it.tp2) && Number(it.price) >= Number(it.tp2)) it.status = "已止盈2";
         else if (Number(it.price) >= Number(it.tp1)) it.status = "已止盈1";
-        else if (Number(it.price) >= Number(it.breakout)) it.status = "已突破";
+        else if (Number.isFinite(it.breakout) && Number(it.price) >= Number(it.breakout)) it.status = "已突破";
         else it.status = "监控中";
       }catch(e){
         it.status = "更新失败";
