--- a/index.html
+++ b/index.html
@@ -520,6 +520,41 @@
       border-color: rgba(59,130,246,.55);
       box-shadow: 0 0 0 4px rgba(59,130,246,.10);
     }
+
+    /* Toggle switch (for background refresh option) */
+    .switch{
+      position: relative;
+      display: inline-block;
+      width: 46px;
+      height: 26px;
+      flex: 0 0 auto;
+    }
+    .switch input{ display:none; }
+    .switch .slider{
+      position: absolute;
+      inset: 0;
+      border-radius: 999px;
+      background: rgba(17,24,39,.14);
+      transition: .18s ease;
+    }
+    .switch .slider:before{
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      left: 3px;
+      top: 3px;
+      border-radius: 999px;
+      background: #fff;
+      box-shadow: 0 8px 18px rgba(17,24,39,.20);
+      transition: .18s ease;
+    }
+    .switch input:checked + .slider{
+      background: rgba(11,122,43,.32);
+    }
+    .switch input:checked + .slider:before{
+      transform: translateX(20px);
+    }
     .modal-ft{
       padding: 12px 16px 16px 16px;
       display:flex;
@@ -673,6 +708,20 @@
           <button class="btn blue" id="btnExport" type="button">导出</button>
           <button class="btn green" id="btnImport" type="button">导入</button>
         </div>
+
+        <div style="margin-top:12px;display:flex;align-items:center;justify-content:space-between;gap:12px;">
+          <div style="min-width:0;">
+            <div style="font-weight:900;">后台继续刷新</div>
+            <div style="margin-top:2px;color:var(--muted);font-size:12px;line-height:1.35;">
+              开启后：页面切到后台也会尝试刷新（移动端可能仍会被系统限速/暂停）。
+            </div>
+          </div>
+          <label class="switch" title="后台继续刷新">
+            <input type="checkbox" id="bgRefreshToggle" />
+            <span class="slider"></span>
+          </label>
+        </div>
+
         <input id="ioFile" type="file" accept="application/json,.json" style="display:none" />
         <div style="margin-top:10px;color:var(--muted);font-size:12px;line-height:1.5;">
           导出会下载 JSON 文件；导入会覆盖当前股票列表（本地缓存）。
@@ -686,6 +735,11 @@
     // ---------- Data Layer ----------
     const LS_KEY = "strategy_cards_frontend_only_v3";
     const LS_DRAFT_KEY = "strategy_cards_form_draft_v2";
+    const LS_BG_REFRESH_KEY = "strategy_cards_bg_refresh_v1";
+
+    // Background refresh (best-effort; browsers/OS may still throttle in background)
+    let allowBgRefresh = false;
+    try{ allowBgRefresh = localStorage.getItem(LS_BG_REFRESH_KEY) === "1"; }catch(_){ /* ignore */ }
 
     /** @type {{id:string, symbol:string, price:number, prevClose:number, open:number, high:number, low:number, avgPrice:number, volRatio:number, status:string, updatedAt:string, stop:number, support:number, breakout:(number|null), tp1:number, tp2:(number|null), name?:string, marketCode?:string}[]} */
     let items = load() ?? [];
@@ -1005,12 +1059,12 @@
               </div>
 
               <div class="price-mid">
-                <div class="metric"><div class="m-label">今开</div><div class="m-val">${formatMaybeCNY(it.open)}</div></div>
                 <div class="metric"><div class="m-label">最高</div><div class="m-val">${formatMaybeCNY(it.high)}</div></div>
                 <div class="metric"><div class="m-label">均价</div><div class="m-val">${formatMaybeCNY(it.avgPrice)}</div></div>
-                <div class="metric"><div class="m-label">昨收</div><div class="m-val">${formatMaybeCNY(it.prevClose)}</div></div>
+                <div class="metric"><div class="m-label">今开</div><div class="m-val">${formatMaybeCNY(it.open)}</div></div>
                 <div class="metric"><div class="m-label">最低</div><div class="m-val">${formatMaybeCNY(it.low)}</div></div>
                 <div class="metric"><div class="m-label">量比</div><div class="m-val">${formatRatio(it.volRatio)}</div></div>
+                <div class="metric"><div class="m-label">昨收</div><div class="m-val">${formatMaybeCNY(it.prevClose)}</div></div>
               </div>
 
               <div class="price-right">
@@ -1124,6 +1178,7 @@
     const ioFile = document.getElementById("ioFile");
     const btnExport = document.getElementById("btnExport");
     const btnImport = document.getElementById("btnImport");
+    const bgRefreshToggle = document.getElementById("bgRefreshToggle");
 
     function openIO(){
       if(!ioOverlay) return;
@@ -1145,6 +1200,15 @@
     document.addEventListener("keydown", (e) => {
       if(e.key === "Escape" && ioOverlay && ioOverlay.classList.contains("show")) closeIO();
     });
+
+    if(bgRefreshToggle){
+      bgRefreshToggle.checked = !!allowBgRefresh;
+      bgRefreshToggle.addEventListener("change", () => {
+        allowBgRefresh = !!bgRefreshToggle.checked;
+        try{ localStorage.setItem(LS_BG_REFRESH_KEY, allowBgRefresh ? "1" : "0"); }catch(_){ /* ignore */ }
+        toast(allowBgRefresh ? "已开启后台刷新" : "已关闭后台刷新");
+      });
+    }
 
     function downloadJSON(filename, obj){
       const s = JSON.stringify(obj, null, 2);
@@ -1489,7 +1553,7 @@
     function startAutoRefresh(){
       if(timer) clearInterval(timer);
       timer = setInterval(() => {
-        if (document.visibilityState === "visible") updateAllPrices();
+        if (allowBgRefresh || document.visibilityState === "visible") updateAllPrices();
       }, 5000);
     }
     document.addEventListener("visibilitychange", () => {
